@@ -20,6 +20,8 @@ Revision 0.2.6, released XX-05-2019
 - Added RFC5940 providing CMS Revocation Information Choices
 - Added RFC7296 providing IKEv2 Certificate Bundle
 - Added RFC8619 providing HKDF Algorithm Identifiers
+- Added RFC7191 providing CMS Key Package Receipt and Error Content
+  Types
 
 Revision 0.2.5, released 24-04-2019
 -----------------------------------
